tests/error/errors_on_usage/if_type_change.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool) -> int:
    y = 3
    if x:
        y = False
    z = y
    return 42
