tests/error/errors_on_usage/if_type_change.err
Error: Different types (at $FILE:9:8)
  | 
7 |     if x:
8 |         y = False
9 |     z = y
  |         ^ Variable `y` may refer to different types
  | 
6 |     y = 3
  |     - This is of type `int`
  | 
8 |         y = False
  |         - This is of type `bool`

Guppy compilation failed due to 1 previous error
